Edit logos folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <nav>
             <div id="nav-top">
-                <i id="nav-i"><img src="logos/reshot-icon-square-S3RGTA8EF5.svg" alt="" id="nav-img"></i>
+                <i id="nav-i"><img src="logos/reshot-icon-github-NY46M9DGFU.svg" alt="" id="nav-img"></i>
                 <h3 id="nav-title">Dashboard</h3>
             </div>
         
@@ -19,10 +19,10 @@
                 <li><img src="nav-logos/reshot-icon-profile-8F275WUJPN.svg" alt="" class="list-img">Profile</li>
                 <li><img src="nav-logos/reshot-icon-message-6287FEYTD9.svg" alt="" class="list-img">Messages</li>
                 <li><img src="nav-logos/reshot-icon-clock-face-ULEZS2V6NT.svg" alt="" class="list-img">History</li>
-                <li><img src="nav-logos/reshot-icon-tasks-6ZYF8CTMPS.svg" alt="" class="list-img">Tasks</li>
-                <li><img src="nav-logos/reshot-icon-community-work-62LHA9YNVT (1).svg" alt="" class="list-img">Communities</li>
+                <li><img src="nav-logos/reshot-icon-list-UQ7FKRE2YS.svg" alt="" class="list-img">Tasks</li>
+                <li><img src="nav-logos/reshot-icon-leadership-TA4WMRLVXG.svg" alt="" class="list-img">Communities</li>
                 <li></li>
-                <li><img src="nav-logos/reshot-icon-settings-cog-7QGXDSVBCR.svg" alt="" class="list-img" id="settings-img">Settings</li>
+                <li><img src="nav-logos/reshot-icon-setting-AJK2YLZVST.svg" alt="" class="list-img" id="settings-img">Settings</li>
                 <li><img src="nav-logos/reshot-icon-24-hours-support-WKBPMCV4SQ.svg" alt="" class="list-img">Support</li>
                 <li><img src="nav-logos/reshot-icon-safe-check-CNVS2TW84A.svg" alt="" class="list-img">Privacy</li>
             </ul>
